--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,7 @@
   href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
 />
 
-
+<!-- font awesome  -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
   </body>
 </html>
